# multi-agents-coder

./: LICENSE  pyproject.toml
.devcontainer/: devcontainer.json
multi-agents-coder/: main.py  sidebar.py
multi_agents_coder/agents/: coding_agents.py  llm_config.py
multi_agents_coder/ui/: main_page.py  sidebar.py
